--- a/public/venera-interiors---about-&-contact/package.json
+++ b/public/venera-interiors---about-&-contact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finterest-capital",
+  "name": "venera-interiors---about-&-contact",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.5"
+    "react": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
